add table update method

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
     $(document).ready(function(){
         $.ajax({
-            url: "http://localhost:8080/greeting?name=hg",
+            url: "http://localhost:8080/hellotext",
             beforeSend: function( xhr ) {
                 xhr.overrideMimeType( "text/plain; charset=x-user-defined" );
             }
